# swarm

./: Cargo.toml  NOTES.md
app/: Cargo.toml
app/src/: main.rs
crates/camera/: Cargo.toml
crates/camera/src/: camera.rs  lib.rs
crates/camera/src/camera/: mod.rs  types.rs
crates/character/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  schedule.rs
crates/debug/: Cargo.toml
crates/debug/src/: fps.rs  lib.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs
