[package]
name = "app"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug"]
debug = ["dep:swarm_debug"]

[dependencies]
bevy = { workspace = true }

swarm_camera = { path = "../crates/camera" }
swarm_character = { path = "../crates/character" }
swarm_core = { path = "../crates/core" }
swarm_debug = { path = "../crates/debug", optional = true }
swarm_input = { path = "../crates/input" }